[gd_scene load_steps=7 format=3 uid="uid://ct0hrtoe7lyih"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_0igk8"]
[ext_resource type="AudioStream" uid="uid://4r1klx2r4wx1" path="res://Wayfarin' Stranger (Alto) Audio Only.mp3" id="2_d410u"]

[sub_resource type="Theme" id="Theme_rvcbw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vn7r"]
bg_color = Color(0.639621, 0.568624, 0.690129, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqecg"]
bg_color = Color(0.595376, 0.627715, 0.349139, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bepro"]
bg_color = Color(0.703872, 0.569832, 0.431577, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0igk8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VolLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MuteLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="back_to_start" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3125
anchor_top = 0.833333
anchor_right = 0.703125
anchor_bottom = 0.901235
offset_top = -8.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_rvcbw")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vn7r")
theme_override_styles/hover = SubResource("StyleBoxFlat_eqecg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bepro")
text = "BACK"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
rotation = -0.0749653
stream = ExtResource("2_d410u")
autoplay = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="back_to_start" to="." method="_on_back_to_start_pressed"]
